一级缓存、二级缓存源码

--- a/笔记.md
+++ b/笔记.md
@@ -29,6 +29,10 @@ mybatis源码笔记：
       </mappers>
   </configuration>
   
+  
+  
+   
+  
   首先要知道一点：configuration对应着configuration类
   environment节点对应着environment对象 DataSource是包装在environment中
   
@@ -57,4 +61,39 @@ mybatis源码笔记：
     
     
     
-  selectOne 也是调用的selectList,在selectList返回数据之后，如果长度为1，就取list.get(0),否则的话，就报错 
+  selectOne 也是调用的selectList,在selectList返回数据之后，如果长度为1，就取list.get(0),否则的话，就报错
+  
+  
+  
+  ------------------------------------------------
+  mybatis和spring整合之后，mapperScannerRegistrar也会调用doScan()来扫描包下的所有.class文件，这里的doScan和spring在扫描bean的时候，用的doScan是一样的，但是不一样的地方在：在获取到所有的.class文件之后，会遍历每个class文件，然后生成ScannedGenericBeanDefinition对象，在this.isCandidateComponent((AnnotatedBeanDefinition)sbd) 判断当前bean是否需要注入的时候，mybatis和spring是调用不同的方法
+   spring调用的是
+     org.springframework.context.annotation.ClassPathScanningCandidateComponentProvider#isCandidateComponent(org.springframework.beans.factory.annotation.AnnotatedBeanDefinition)
+  
+   mybatis调用的是
+     org.mybatis.spring.mapper.ClassPathMapperScanner#isCandidateComponent
+  
+   需要注意的是：
+     ClassPathMapperScanner是ClassPathScanningCandidateComponentProvider的子类，
+  
+   所以，mybatis和spring整合之后，mapperScannerRegistrar只会注入mybatis的接口，spring只会注入ComponentScan注解要扫描的包(spring @Component这些注解修饰的类)
+   
+   
+   ------------------------------------------------
+   
+   无论是package/url/class/resource，都会有两个内容：
+      1.把当前select、update、insert、delete封装成一个mappedStatement,然后把mappedStatement存到一个map中，key值是namespace+id(select节点的id),value 是刚才build的mappedStatement
+      2.把当前class，存放到另外一个map；knownMappers.put(type, new MapperProxyFactory<>(type));
+      
+      mappedStatement在使用sqlSesison.selectOne()查询的时候，会先根据入参中的全类名+方法名，从mappedStatement获取value
+      如果是使用的sqlSession.getMapper();则会根据入参中的class从knowMappers中获取mapperProxyFactory,然后mapperProxyFactory.newInstance(sqlSession);生成当前mapperInterface的代理对象；
+      在通过生成的代理对象，执行目标方法的时候，会先调用mapperFactory.invoke()方法
+      
+      这里和mybaytis+spring整合之后，的区别是：原生的getMapper()获取到的代理对象 mapperProxy,在初始化的时候，传入的sqlSession是defaultSQLSession，而整合之后，mapperProxy在初始化时，传入的sqlSession是SqlSesisonTemplate，所以this.sqlSession = new SqlSessionTemplate(sqlSessionFactory);
+      
+      那为什么和spring整合之后，sqlSession就变成了SqlSessionTemplate？
+      因为MapperFactoryBean是继承了SqlSessionDaoSupport,在SqlSessionDaoSupport中会进行setSqlSessionFactory()，在这里,this.sqlSession = new SqlSessionTemplate(sqlSessionFactory);
+      所以，在mapperFactoryBean中getObject()的时候，this.sqlSession.getMapper()就会进到sqlSessionTemplate中，在getMapper中，初始化了代理对象，this.sqlSession = new SqlSessionTemplate(sqlSessionFactory);所以这里就是SqlSessionTemplate
+      
+      
+   mybatis对于@Select这种情况，是在mapperFactoryBean中checkDaoConfig()方法，在那当前接口添加到mappedStatement的时候，org.apache.ibatis.builder.annotation.MapperAnnotationBuilder.parseStatement,会调用这个方法，把注解的信息取到，然后包装成mappedStatement
